--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,13 @@
       <artifactId>spring-security-config</artifactId>
       <version>5.4.1</version>
     </dependency>
-  </dependencies>
 
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-taglibs</artifactId>
+      <version>5.4.1</version>
+    </dependency>
+  </dependencies>
 
   <build>
     <finalName>spring_course_security</finalName>
